--- a/GE.WebUI/Content/less/st-page.less
+++ b/GE.WebUI/Content/less/st-page.less
@@ -16,14 +16,10 @@
     color: @color-white;
 }
 
-#st-page section > .desc {
+/*#st-page section > .desc {
     color: @color-muted-blue;
     margin-bottom: @def-pad*4;
-}
-
-#st-page input[type="radio"] {
-    float: left;
-}
+}*/
 
 #st-page .next-btn {
     position: relative;
