--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -40,6 +40,7 @@
                 }
                 else
                 {
+                    @Html.HiddenFor(x=>x.TestType)
                     @Html.EnumDropDownListFor(x => x.TestType, new { @class = "form-control", @disabled = "disabled" })
                 }
                 @Html.ValidationMessageFor(x => x.TestType)
@@ -47,6 +48,15 @@
         </div>
     </div>
 
+    @if (!isNew && User.IsInRole("architect"))
+    {
+        <div class="form-group">
+            @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
+            <span class="text-info"> (применяется для уникальной идентификации материала)</span>
+            @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(x => x.TitleUrl)
+        </div>
+    }
 
     <div class="form-group">
         @Html.LabelFor(x => x.Description, new { @class = "control-label" })
