--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -512,7 +512,7 @@
             <div class="row">
                 <div class="col-md-4">@SX.WebCore.Resources.Settings.adminPanelName<br /><small>Последний старт: @MvcApplication.LastStartDate</small></div>
                 <div class="col-md-8">
-                    <div class="pull-right">
+                    <div class="developer">
                         Разработка и поддержка: <a href="mailto:simlex.dev.2014@gmail.com">simlex.dev.2014@gmail.com</a>
                     </div>
                 </div>
