--- a/GE.WebAdmin/Views/Users/Edit.cshtml
+++ b/GE.WebAdmin/Views/Users/Edit.cshtml
@@ -12,16 +12,16 @@
 <h2>@ViewBag.Title</h2>
 
 <div class="user">
+    @if (Model.AvatarId.HasValue)
+            {
+        <div>
+            <img class="img-circle" alt="@userName" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.AvatarId))" />
+        </div>
+    }
     <div class="row">
         <div class="col-md-4">
-            @if (Model.AvatarId.HasValue)
-            {
-                <div>
-                    <img class="img-circle" alt="@userName" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.AvatarId))" />
-                </div>
-            }
             <section>
-                <h3>Статус</h3>
+                <h3 class="text-warning">Статус</h3>
                 <table class="table table-striped table-condensed">
                     <tbody>
                         <tr>
@@ -49,15 +49,16 @@
         </div>
 
         <div class="col-md-8">
-
+            <section id="subscription">
+                @Html.Partial("_UserReports", new int[] { 1, 2, 3 })
+            </section>
         </div>
     </div>
 </div>
 
 @section scripts{
     <script type="text/javascript">
-        function removeMessage(id)
-        {
+        function removeMessage(id) {
             setTimeout(function () {
                 $(id).fadeOut('fast');
             }, 1000);
