--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -11,6 +11,7 @@
 </div>
 
 @section scripts{
+    <script type="text/javascript" src="~/share42/share42.js"></script>
     <script>
         $(function () {
             initialyzeIndicators();
