--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -325,7 +325,7 @@
                                 @if (User.IsInRole("admin"))
                                 {
                                     <li>
-                                        <a href="#"><i class="fa fa-smile-o"></i> Афоризмы <span class="fa arrow"></span></a>
+                                        <a href="#"><i class="fa fa-graduation-cap"></i> Афоризмы <span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
                                                 <a href="@Url.Action(MVC.Aphorisms.Index())">Каталог афоризмов</a>
