--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -4,6 +4,7 @@
     var pagerInfo = ViewBag.PagerInfo;
     var filter = ViewBag.Filter != null ? (VMRequest)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
+    var siteDomain = string.Intern(MvcApplication.SiteDomain);
 }
 
 
@@ -26,7 +27,9 @@
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="UrlRef", Caption="UrlRef",Template=(m)=> {
                 return !string.IsNullOrEmpty(m.UrlRef)? string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a href=\"{0}\" target=\"_blank\" rel=\"nofollow\">{1}</a>", m.UrlRef, m.UrlRef.Length>=300?m.UrlRef.Substring(0,200)+"...":m.UrlRef):null;
             }},
-            new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="RawUrl", Caption="Целевой адрес"}
+            new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="RawUrl", Caption="Целевой адрес", Template=(x)=> {
+                return string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a target=\"_blank\" href=\"{0}{1}\">{0}{1}</a>", siteDomain, x.RawUrl);
+            } }
         },
             PagerInfo = pagerInfo,
             Filter = filter,
