--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
-    var siteName = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
-    var logoUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
+    var siteName = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
+    var logoUrl = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
 }
 <footer>
     <div class="shadow"></div>
