--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
-    var siteName = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
-    var logoUrl = GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
+    var siteName = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
+    var logoUrl = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
 }
 <nav class="navbar navbar-default">
     <div class="container">
