--- a/GE.WebUI/Views/SiteQuetions/Edit.cshtml
+++ b/GE.WebUI/Views/SiteQuetions/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewBag.H1 = ViewBag.H1 ?? title;
     ViewBag.H1CssClass = "hidden";
     ViewBag.Description = ViewBag.Description ?? "На данной страницы Вы можете задать любые вопросы, сделать предложения по сайту или предъявить претензию владельцам ресурса";
-    ViewBag.Keywords = ViewBag.Keywords ?? string.Format("{0}, вопросы, предложения, претензии", GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName));
+    ViewBag.Keywords = ViewBag.Keywords ?? string.Format("{0}, вопросы, предложения, претензии", GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName));
     var message = TempData["Message"];
 }
 
