--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -6,32 +6,42 @@
 
 <h2>@ViewBag.Title</h2>
 
-@if (!isNew)
-{
-    <div class="text-right">
-        <div class="form-group">
+
+<div class="text-right">
+    <div class="form-group">
+        @if (!isNew)
+        {
             <form method="post" action="delete">
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
                 <button type="submit" class="btn btn-danger" onclick="if(!confirm('Удалить запись?')){return false;}">Удалить тест</button>
             </form>
-        </div>
+        }
+        else
+        {
+            <form method="post" action="@Url.Action(MVC.SiteTests.LoadTestFromFile())" enctype="multipart/form-data">
+                @Html.AntiForgeryToken()
+                <input type="file" name="file" class="hidden" />
+            </form>
+            <a href="javascript:void(0)" id="ofd-btn" class="btn btn-default"><i class="fa fa-th" aria-hidden="true"></i> Загрузить из файла</a>
+        }
     </div>
-}
+</div>
+
 
 <form method="post" action="edit">
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
 
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="form-group">
                 @Html.LabelFor(x => x.Title, new { @class = "control-label" })
                 @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.Title)
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="form-group">
                 @Html.LabelFor(x => x.TestType, new { @class = "control-label" })
                 @if (isNew)
@@ -40,10 +50,17 @@
                 }
                 else
                 {
-                    @Html.HiddenFor(x=>x.TestType)
+                    @Html.HiddenFor(x => x.TestType)
                     @Html.EnumDropDownListFor(x => x.TestType, new { @class = "form-control", @disabled = "disabled" })
                 }
                 @Html.ValidationMessageFor(x => x.TestType)
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Show, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Show)
             </div>
         </div>
     </div>
@@ -71,8 +88,8 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel"><b>@Model.Title</b>. Матрица ответов теста</h4>
                 </div>
-                <div class="modal-body">
-                    ...
+                <div class="modal-body" style="overflow:hidden; overflow-y:scroll; overflow-x:scroll; max-height:800px;">
+                    
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
@@ -94,6 +111,14 @@
 @section scripts{
     <script>
         $(function () {
+            $('#ofd-btn').click(function(){
+                $file=$(this).prev('form').find('input[type="file"]');
+                $file.change(function(){
+                    $(this).closest('form').submit();
+                });
+                $file.click();
+            });
+
             $('#matrixModal').on('show.bs.modal', function (e) {
                 $.ajax({
                     method: 'get',
