--- a/GE.WebAdmin/Content/less/site.less
+++ b/GE.WebAdmin/Content/less/site.less
@@ -5,6 +5,9 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic&subset=latin,cyrillic);
 
+a, a:active, a:focus, a:link{
+    outline:none !important;
+}
 body {
     font-family: 'Roboto Condensed', sans-serif;
     color: @color-black;
