--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + SX.WebCore.Resources.Settings.adminPanelName : SX.WebCore.Resources.Settings.adminPanelVersion)</title>
-    <link rel="icon" href="~/faveicon.png" type="image/png" />
+    <link rel="icon" href="~/Content/dist/i/faveicon.png" type="image/png" />
 
     <!-- Bootstrap -->
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
