--- a/GE.WebAdmin/Views/SiteSettings/EditEmptyGame.cshtml
+++ b/GE.WebAdmin/Views/SiteSettings/EditEmptyGame.cshtml
@@ -17,25 +17,37 @@
     @Html.HiddenFor(x => x.OldGoodImagePath)
     @Html.HiddenFor(x => x.OldBadImagePath)
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.IconPath, new { @class = "control-label" })
-        @Html.EditorFor(x => x.IconPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к иконке" } })
-        @Html.ValidationMessageFor(x => x.IconPath)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(x => x.GoodImagePath, new { @class = "control-label" })
-        @Html.EditorFor(x => x.GoodImagePath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к положительному изображению" } })
-        @Html.ValidationMessageFor(x => x.GoodImagePath)
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(x => x.BadImagePath, new { @class = "control-label" })
-        @Html.EditorFor(x => x.BadImagePath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к отрицательному изображению" } })
-        @Html.ValidationMessageFor(x => x.BadImagePath)
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                @Html.LabelFor(x => x.IconPath, new { @class = "control-label" })
+                @Html.EditorFor(x => x.IconPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к иконке" } })
+                @Html.ValidationMessageFor(x => x.IconPath)
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                @Html.LabelFor(x => x.GoodImagePath, new { @class = "control-label" })
+                @Html.EditorFor(x => x.GoodImagePath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к положительному изображению" } })
+                @Html.ValidationMessageFor(x => x.GoodImagePath)
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                @Html.LabelFor(x => x.BadImagePath, new { @class = "control-label" })
+                @Html.EditorFor(x => x.BadImagePath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к отрицательному изображению" } })
+                @Html.ValidationMessageFor(x => x.BadImagePath)
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Сохранить</button>
     </div>
 </form>
+
+@section scripts{
+    <script>
+        $("#IconPath, #GoodImagePath, #BadImagePath").sx_gvl();
+    </script>
+}
